# cli_ai_coder

./: CHANGELOG.md  README.md  __init__.py  cli.py  main.py  mkdocs.yml  pyproject.toml
.cli_ai_coder/: history.jsonl
.github/: copilot-instructions.md
ai/: client.py  context.py  history.py  patches.py  plan_executor.py  planner.py  prompts.py  router.py  spec_pipeline.py  tools.py
cli_ai_coder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codemods/: __init__.py  base.py  js_ts.py  python_libcst.py
core/: billing.py  config.py  logging.py  telemetry.py  utils.py
docs/: index.md
editor/: app.py  buffers.py  commands.py  diagnostics.py  diffview.py  filetree.py  gutter.py  inline_suggest.py  lsp_actions.py  pipelineview.py  planview.py  quickfix.py  search.py  semantics.py  statusbar.py  styles.py  telemetry_wizard.py  workspace_refactor.py  ws_codemod.py
indexer/: __init__.py  embeddings.py  graph.py  rerank.py  symbols.py  watch.py
language/: __init__.py  lsp_client.py
plugins/: __init__.py  example_provider.py  host.py  ipc.py  permissions.py
scripts/: PKGBUILD  cli-ai-coder.json  generate_brew_formula.py  generate_cli_docs.py  release_check.py  sign-release.sh
tests/: test_codemods_js.py  test_codemods_python.py  test_config.py  test_context.py  test_context_v2.py  test_embeddings_retriever.py  test_git.py  test_git_extras.py  test_history.py  test_index_watch.py  test_indexer.py  test_lsp_actions.py  test_lsp_mock.py  test_lsp_organize_imports.py  test_lsp_semantic_tokens.py  test_network_resilience.py  (+11 more)
(+16 files in other folders)
